<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_equipment"
            android:icon="@drawable/ic_equipment"
            android:title="@string/equipment" />
        <item
            android:id="@+id/nav_table"
            android:icon="@drawable/ic_sroll"
            android:title="@string/tables" />
        <item
            android:id="@+id/nav_spells"
            android:icon="@drawable/ic_spellbook"
            android:title="@string/label_list_spell" />
        <item
            android:id="@+id/nav_market"
            android:icon="@drawable/ic_market"
            android:title="@string/menu_market" />
    </group>

</menu>
