<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toole_game_market"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:orientation="vertical"
    tools:context=".ui.tools.EquipmentTableMarketFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewMarkets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/color_text" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:hint="@string/hint_market_name">

                    <EditText
                        android:id="@+id/eTMarketName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnMarketNameRoll"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_btn_dice20_re"
                    android:backgroundTint="@color/button_roll_selector"
                    android:stateListAnimator="@anim/nav_default_pop_exit_anim"
                    android:visibility="gone" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:hint="Названия города">

                <EditText
                    android:id="@+id/eTMarketCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/switchMarketHomeBrew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/switch_homebrew" />

            <Switch
                android:id="@+id/switchRollFullMarket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_roll_market" />

            <TextView
                android:id="@+id/tVMarketEqupmett"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/market_equipment" />

            <LinearLayout
                android:id="@+id/tableLayoutMarket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tVMarket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tV_market_namber_equpment" />

                <TextView
                    android:id="@+id/tVTypeTrider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="TextView" />
            </LinearLayout>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Switch"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnRollMarket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_text"
                android:text="@string/roll_market_btn"
                android:textColor="@color/design_default_color_background" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>