<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tVSpellsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/color_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/st_spell_distance" />

            <TextView
                android:id="@+id/tVDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:gravity="center"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/st_spell_cast" />

            <TextView
                android:id="@+id/tVTimeCast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:gravity="center"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/color_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/st_spell_component"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tVComponent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:gravity="center"
                android:text="TextView"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/st_spell_duration" />

            <TextView
                android:id="@+id/tVDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:gravity="center"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tVMComponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/pading"
        android:paddingRight="@dimen/pading"
        android:paddingBottom="@dimen/pading"
        android:text="TextView"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/color_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tVSpellDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/pading"
                android:text="TextView"
                android:textColor="@color/design_default_color_on_secondary" />

        </LinearLayout>


    </ScrollView>

    <TextView
        android:id="@+id/tVLevelSpell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:paddingRight="@dimen/nav_header_vertical_spacing"
        android:text="TextView" />
</LinearLayout>